--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -1,7 +1,12 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-  <div id="top"></div>
+<f:render partial="Css/Maincss" arguments="{_all}" />
+<f:render partial="Js/Jquery" arguments="{_all}" />
+<f:render partial="Js/Mainjs" arguments="{_all}" />
 
-  <f:render section="Main" />
+
+<div id="top"></div>
+
+<f:render section="Main" />
 
 </html>
