[TASK] include header styling

--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -5,7 +5,7 @@
 @use 'global';
 
 // ===== content-elements =====
-// @use 'content-elements/header';
+@use 'content-elements/header';
 // @use 'content-elements/footer';
 @use 'content-elements/big-icon-text-button';
 // @use 'content-elements/accordion';
